objects/LeadInquiryIntegration__c.object
<CustomObject>
    <fields>
        <fullName>AccountGUID__c</fullName>
        <label>AccountGUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementId1__c</fullName>
        <label>AgreementId1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementId2__c</fullName>
        <label>AgreementId2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementId3__c</fullName>
        <label>AgreementId3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementIsApproved1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreementIsApproved1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementIsApproved2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreementIsApproved2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementIsApproved3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreementIsApproved3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCodePlainText__c</fullName>
        <label>CountryCodePlainText</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <globalPicklist>Country_ISO_Code</globalPicklist>
        <label>CountryCode</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CountryPlainText__c</fullName>
        <label>Country Plain Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPlainText__c</fullName>
        <label>EmailPlainText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryConcerns__c</fullName>
        <label>InquiryConcerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguagePlainText__c</fullName>
        <label>Language Plain Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <globalPicklist>Language</globalPicklist>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PhonePlainText__c</fullName>
        <label>Phone Plain Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefererProductId__c</fullName>
        <label>RefererProductId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefererURL__c</fullName>
        <label>RefererURL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RefererinquiryConcerns__c</fullName>
        <label>RefererinquiryConcerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <label>SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>The master data code of state</description>
        <label>StateCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <picklist>
            <picklistValues>
                <fullName>NEW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VALIDATION ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAD CREATION ERROR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubmitDate__c</fullName>
        <label>SubmitDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Lead Inquiry Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>StatusCode__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Li{0000000}</displayFormat>
        <label>LeadIntegration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Inquiry Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement4And5Check</fullName>
        <active>true</active>
        <description>Agreement4And5Check</description>
        <errorConditionFormula>AND( NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR(NOT(ISBLANK( AgreementId4__c )),NOT(ISBLANK( AgreementId5__c))))</errorConditionFormula>
        <errorDisplayField>AccountGUID__c</errorDisplayField>
        <errorMessage>Wrong number of agreements id. Accepted are agreementForTermsAndConditions, agreementForMarketingCommunicationByPhone, agreementForMarketingCommunicationByEmail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgreementsIdShouldbeValid</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT(
OR(
 AND( 
  AgreementId1__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId2__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId3__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 ),
 AND( 
  AgreementId1__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId3__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId2__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 ),
 AND( 
  AgreementId2__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId1__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId3__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 ),
 AND( 
  AgreementId2__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId3__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId1__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 ),
 AND( 
  AgreementId3__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId1__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId2__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 ),
 AND( 
  AgreementId3__c = &apos;agreementForTermsAndConditions&apos;,
  AgreementId2__c = &apos;agreementForMarketingCommunicationByPhone&apos;,
  AgreementId1__c = &apos;agreementForMarketingCommunicationByEmail&apos;
 )
) 
)
)</errorConditionFormula>
        <errorMessage>Wrong agreemntes id. Accepted are agreementForTermsAndConditions, agreementForMarketingCommunicationByPhone, agreementForMarketingCommunicationByEmail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AlwaysApproveTAndC</fullName>
        <active>true</active>
        <description>R8 - agreementForTermsAndConditions should be always approved to proceed inquiry.</description>
        <errorConditionFormula>AND(
 IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT(
OR(
 AND(
  OR(AgreementIsApproved1__c = true,AgreementIsApproved1__c = false)
 ),
 AND(
  
OR(AgreementIsApproved2__c = true,AgreementIsApproved2__c = false)
 ),
 AND(
  OR(AgreementIsApproved3__c = true,AgreementIsApproved3__c = false)
 )
)
)
)</errorConditionFormula>
        <errorMessage>agreementForTermsAndConditions should be always approved to proceed inquiry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckRequiredFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
AND(
 Status__c = &apos;NEW&apos;,
 OR(
  ISBLank(SourceId__c),  
  IsBLank(Text(CountryCode__c)),
  IsBlank(LastName__c),
  IsBlank(Email__c),
  IsBlank(Company__c),
  IsBlank(Message__c),
  IsBlank(InquiryConcerns__c),
  IsBlank(Text(Language__c)) 
 )
)
)</errorConditionFormula>
        <errorMessage>Required parameter is missing. Following parameters are required: SourceId, CountryCode,LastName,Company,Description,InquiryConcerns, language</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateCodeIsAvlOnlyForInUsCa</fullName>
        <active>true</active>
        <description>Check state code</description>
        <errorConditionFormula>AND(
 ISBLANK(StateCode__c ) = false,
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
 NOT(
  OR(  
   ISPICKVAL(CountryCode__c, &apos;AU&apos;),
   ISPICKVAL(CountryCode__c, &apos;BR&apos;),
   ISPICKVAL(CountryCode__c, &apos;CA&apos;),
   ISPICKVAL(CountryCode__c, &apos;DE&apos;),
   ISPICKVAL(CountryCode__c, &apos;ES&apos;),
   ISPICKVAL(CountryCode__c, &apos;FR&apos;),
   ISPICKVAL(CountryCode__c, &apos;IN&apos;),
   ISPICKVAL(CountryCode__c, &apos;PL&apos;),
   ISPICKVAL(CountryCode__c, &apos;US&apos;)
  )
 )
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>StateCode is only available for Australia, Brazil, Canada, France, Germany, India, Poland, Spain and United States</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAustraliaStateCode</fullName>
        <active>true</active>
        <description>Validateion of Australia State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;AU&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;ACT&apos;,
StateCode__c = &apos;NSW&apos;,
StateCode__c = &apos;NT&apos;,
StateCode__c = &apos;QLD&apos;,
StateCode__c = &apos;SA&apos;,
StateCode__c = &apos;TAS&apos;,
StateCode__c = &apos;VIC&apos;,
StateCode__c = &apos;WA&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Australia state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateBrazilStateCode</fullName>
        <active>true</active>
        <description>Validation of Brazil State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;BR&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;AC&apos;,
StateCode__c = &apos;AL&apos;,
StateCode__c = &apos;AM&apos;,
StateCode__c = &apos;AP&apos;,
StateCode__c = &apos;BA&apos;,
StateCode__c = &apos;CE&apos;,
StateCode__c = &apos;DF&apos;,
StateCode__c = &apos;ES&apos;,
StateCode__c = &apos;GO&apos;,
StateCode__c = &apos;MA&apos;,
StateCode__c = &apos;MG&apos;,
StateCode__c = &apos;MS&apos;,
StateCode__c = &apos;MT&apos;,
StateCode__c = &apos;PA&apos;,
StateCode__c = &apos;PB&apos;,
StateCode__c = &apos;PE&apos;,
StateCode__c = &apos;PI&apos;,
StateCode__c = &apos;PR&apos;,
StateCode__c = &apos;RJ&apos;,
StateCode__c = &apos;RN&apos;,
StateCode__c = &apos;RO&apos;,
StateCode__c = &apos;RR&apos;,
StateCode__c = &apos;RS&apos;,
StateCode__c = &apos;SC&apos;,
StateCode__c = &apos;SE&apos;,
StateCode__c = &apos;SP&apos;,
StateCode__c = &apos;TO&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Brazil state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateCanadaStateCode</fullName>
        <active>true</active>
        <description>Validateion of Canada State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;), 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
AND( IsPickVal(CountryCode__c, &apos;CA&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;AB&apos;,
StateCode__c = &apos;BC&apos;,
StateCode__c = &apos;MB&apos;,
StateCode__c = &apos;NB&apos;,
StateCode__c = &apos;NL&apos;,
StateCode__c = &apos;NS&apos;,
StateCode__c = &apos;NT&apos;,
StateCode__c = &apos;NU&apos;,
StateCode__c = &apos;ON&apos;,
StateCode__c = &apos;PE&apos;,
StateCode__c = &apos;QC&apos;,
StateCode__c = &apos;SK&apos;,
StateCode__c = &apos;YT&apos;
) 
) 
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Canada state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateFranceStateCode</fullName>
        <active>true</active>
        <description>Validation of France State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;FR&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;01&apos;,
StateCode__c = &apos;02&apos;,
StateCode__c = &apos;03&apos;,
StateCode__c = &apos;04&apos;,
StateCode__c = &apos;05&apos;,
StateCode__c = &apos;06&apos;,
StateCode__c = &apos;07&apos;,
StateCode__c = &apos;08&apos;,
StateCode__c = &apos;09&apos;,
StateCode__c = &apos;10&apos;,
StateCode__c = &apos;11&apos;,
StateCode__c = &apos;12&apos;,
StateCode__c = &apos;13&apos;,
StateCode__c = &apos;14&apos;,
StateCode__c = &apos;15&apos;,
StateCode__c = &apos;16&apos;,
StateCode__c = &apos;17&apos;,
StateCode__c = &apos;18&apos;,
StateCode__c = &apos;19&apos;,
StateCode__c = &apos;21&apos;,
StateCode__c = &apos;22&apos;,
StateCode__c = &apos;23&apos;,
StateCode__c = &apos;24&apos;,
StateCode__c = &apos;25&apos;,
StateCode__c = &apos;26&apos;,
StateCode__c = &apos;27&apos;,
StateCode__c = &apos;28&apos;,
StateCode__c = &apos;29&apos;,
StateCode__c = &apos;2A&apos;,
StateCode__c = &apos;2B&apos;,
StateCode__c = &apos;30&apos;,
StateCode__c = &apos;31&apos;,
StateCode__c = &apos;32&apos;,
StateCode__c = &apos;33&apos;,
StateCode__c = &apos;34&apos;,
StateCode__c = &apos;35&apos;,
StateCode__c = &apos;36&apos;,
StateCode__c = &apos;37&apos;,
StateCode__c = &apos;38&apos;,
StateCode__c = &apos;39&apos;,
StateCode__c = &apos;40&apos;,
StateCode__c = &apos;41&apos;,
StateCode__c = &apos;42&apos;,
StateCode__c = &apos;43&apos;,
StateCode__c = &apos;44&apos;,
StateCode__c = &apos;45&apos;,
StateCode__c = &apos;46&apos;,
StateCode__c = &apos;47&apos;,
StateCode__c = &apos;48&apos;,
StateCode__c = &apos;49&apos;,
StateCode__c = &apos;50&apos;,
StateCode__c = &apos;51&apos;,
StateCode__c = &apos;52&apos;,
StateCode__c = &apos;53&apos;,
StateCode__c = &apos;54&apos;,
StateCode__c = &apos;55&apos;,
StateCode__c = &apos;56&apos;,
StateCode__c = &apos;57&apos;,
StateCode__c = &apos;58&apos;,
StateCode__c = &apos;59&apos;,
StateCode__c = &apos;60&apos;,
StateCode__c = &apos;61&apos;,
StateCode__c = &apos;62&apos;,
StateCode__c = &apos;63&apos;,
StateCode__c = &apos;64&apos;,
StateCode__c = &apos;65&apos;,
StateCode__c = &apos;66&apos;,
StateCode__c = &apos;67&apos;,
StateCode__c = &apos;68&apos;,
StateCode__c = &apos;69&apos;,
StateCode__c = &apos;70&apos;,
StateCode__c = &apos;71&apos;,
StateCode__c = &apos;72&apos;,
StateCode__c = &apos;73&apos;,
StateCode__c = &apos;74&apos;,
StateCode__c = &apos;75&apos;,
StateCode__c = &apos;76&apos;,
StateCode__c = &apos;77&apos;,
StateCode__c = &apos;78&apos;,
StateCode__c = &apos;79&apos;,
StateCode__c = &apos;80&apos;,
StateCode__c = &apos;81&apos;,
StateCode__c = &apos;82&apos;,
StateCode__c = &apos;83&apos;,
StateCode__c = &apos;84&apos;,
StateCode__c = &apos;85&apos;,
StateCode__c = &apos;86&apos;,
StateCode__c = &apos;87&apos;,
StateCode__c = &apos;88&apos;,
StateCode__c = &apos;89&apos;,
StateCode__c = &apos;90&apos;,
StateCode__c = &apos;91&apos;,
StateCode__c = &apos;92&apos;,
StateCode__c = &apos;93&apos;,
StateCode__c = &apos;94&apos;,
StateCode__c = &apos;95&apos;,
StateCode__c = &apos;971&apos;,
StateCode__c = &apos;972&apos;,
StateCode__c = &apos;973&apos;,
StateCode__c = &apos;974&apos;,
StateCode__c = &apos;975&apos;,
StateCode__c = &apos;976&apos;,
StateCode__c = &apos;977&apos;,
StateCode__c = &apos;978&apos;,
StateCode__c = &apos;986&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>France state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateGermanyStateCode</fullName>
        <active>true</active>
        <description>Validation of GermanyState Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;DE&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;01&apos;,
StateCode__c = &apos;02&apos;,
StateCode__c = &apos;03&apos;,
StateCode__c = &apos;04&apos;,
StateCode__c = &apos;05&apos;,
StateCode__c = &apos;06&apos;,
StateCode__c = &apos;07&apos;,
StateCode__c = &apos;08&apos;,
StateCode__c = &apos;09&apos;,
StateCode__c = &apos;10&apos;,
StateCode__c = &apos;11&apos;,
StateCode__c = &apos;12&apos;,
StateCode__c = &apos;13&apos;,
StateCode__c = &apos;14&apos;,
StateCode__c = &apos;15&apos;,
StateCode__c = &apos;16&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Germany state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateIndiaStateCode</fullName>
        <active>true</active>
        <description>Validateion of India State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;), 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
AND( IsPickVal(CountryCode__c, &apos;IN&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;01&apos;,
StateCode__c = &apos;02&apos;,
StateCode__c = &apos;03&apos;,
StateCode__c = &apos;04&apos;,
StateCode__c = &apos;05&apos;,
StateCode__c = &apos;06&apos;,
StateCode__c = &apos;07&apos;,
StateCode__c = &apos;08&apos;,
StateCode__c = &apos;09&apos;,
StateCode__c = &apos;10&apos;,
StateCode__c = &apos;11&apos;,
StateCode__c = &apos;12&apos;,
StateCode__c = &apos;13&apos;,
StateCode__c = &apos;14&apos;,
StateCode__c = &apos;15&apos;,
StateCode__c = &apos;16&apos;,
StateCode__c = &apos;17&apos;,
StateCode__c = &apos;18&apos;,
StateCode__c = &apos;19&apos;,
StateCode__c = &apos;20&apos;,
StateCode__c = &apos;21&apos;,
StateCode__c = &apos;22&apos;,
StateCode__c = &apos;23&apos;,
StateCode__c = &apos;24&apos;,
StateCode__c = &apos;25&apos;,
StateCode__c = &apos;26&apos;,
StateCode__c = &apos;27&apos;,
StateCode__c = &apos;28&apos;,
StateCode__c = &apos;29&apos;,
StateCode__c = &apos;30&apos;,
StateCode__c = &apos;31&apos;,
StateCode__c = &apos;32&apos;,
StateCode__c = &apos;33&apos;,
StateCode__c = &apos;34&apos;,
StateCode__c = &apos;37&apos;,
StateCode__c = &apos;36&apos;,
StateCode__c = &apos;38&apos;
) 
) 
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>India state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidatePolandStateCode</fullName>
        <active>true</active>
        <description>Validation of Poland State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;PL&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;DSL&apos;,
StateCode__c = &apos;K-P&apos;,
StateCode__c = &apos;LBL&apos;,
StateCode__c = &apos;LBS&apos;,
StateCode__c = &apos;LDZ&apos;,
StateCode__c = &apos;MAL&apos;,
StateCode__c = &apos;MAZ&apos;,
StateCode__c = &apos;OPO&apos;,
StateCode__c = &apos;PDK&apos;,
StateCode__c = &apos;PDL&apos;,
StateCode__c = &apos;POM&apos;,
StateCode__c = &apos;SLS&apos;,
StateCode__c = &apos;SWK&apos;,
StateCode__c = &apos;WLK&apos;,
StateCode__c = &apos;W-M&apos;,
StateCode__c = &apos;Z-P&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Poland state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateSpainStateCode</fullName>
        <active>true</active>
        <description>Validation of SpainState Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;ES&apos;), 
NOT( 
OR( 
IsBlank(StateCode__c),
StateCode__c = &apos;01&apos;,
StateCode__c = &apos;02&apos;,
StateCode__c = &apos;03&apos;,
StateCode__c = &apos;04&apos;,
StateCode__c = &apos;05&apos;,
StateCode__c = &apos;06&apos;,
StateCode__c = &apos;07&apos;,
StateCode__c = &apos;08&apos;,
StateCode__c = &apos;09&apos;,
StateCode__c = &apos;10&apos;,
StateCode__c = &apos;11&apos;,
StateCode__c = &apos;12&apos;,
StateCode__c = &apos;13&apos;,
StateCode__c = &apos;14&apos;,
StateCode__c = &apos;15&apos;,
StateCode__c = &apos;16&apos;,
StateCode__c = &apos;17&apos;,
StateCode__c = &apos;18&apos;,
StateCode__c = &apos;19&apos;,
StateCode__c = &apos;20&apos;,
StateCode__c = &apos;21&apos;,
StateCode__c = &apos;22&apos;,
StateCode__c = &apos;23&apos;,
StateCode__c = &apos;24&apos;,
StateCode__c = &apos;25&apos;,
StateCode__c = &apos;26&apos;,
StateCode__c = &apos;27&apos;,
StateCode__c = &apos;28&apos;,
StateCode__c = &apos;29&apos;,
StateCode__c = &apos;30&apos;,
StateCode__c = &apos;31&apos;,
StateCode__c = &apos;32&apos;,
StateCode__c = &apos;33&apos;,
StateCode__c = &apos;34&apos;,
StateCode__c = &apos;35&apos;,
StateCode__c = &apos;36&apos;,
StateCode__c = &apos;37&apos;,
StateCode__c = &apos;38&apos;,
StateCode__c = &apos;39&apos;,
StateCode__c = &apos;40&apos;,
StateCode__c = &apos;41&apos;,
StateCode__c = &apos;42&apos;,
StateCode__c = &apos;43&apos;,
StateCode__c = &apos;44&apos;,
StateCode__c = &apos;45&apos;,
StateCode__c = &apos;46&apos;,
StateCode__c = &apos;47&apos;,
StateCode__c = &apos;48&apos;,
StateCode__c = &apos;49&apos;,
StateCode__c = &apos;50&apos;,
StateCode__c = &apos;51&apos;,
StateCode__c = &apos;52&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>Spain state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateUSAStateCode</fullName>
        <active>true</active>
        <description>Validateion of USA State Code</description>
        <errorConditionFormula>AND( 
IsPickVal(StatusCode__c, &apos;NEW&apos;),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
AND( IsPickVal(CountryCode__c, &apos;US&apos;), 
NOT( 
OR(  
IsBlank(StateCode__c), 
StateCode__c = &apos;AK&apos;,
StateCode__c = &apos;AL&apos;,
StateCode__c = &apos;AR&apos;,
StateCode__c = &apos;AS&apos;,
StateCode__c = &apos;AZ&apos;,
StateCode__c = &apos;CA&apos;,
StateCode__c = &apos;CO&apos;,
StateCode__c = &apos;CT&apos;,
StateCode__c = &apos;DC&apos;,
StateCode__c = &apos;DE&apos;,
StateCode__c = &apos;FL&apos;,
StateCode__c = &apos;GA&apos;,
StateCode__c = &apos;GU&apos;,
StateCode__c = &apos;HI&apos;,
StateCode__c = &apos;IA&apos;,
StateCode__c = &apos;ID&apos;,
StateCode__c = &apos;IL&apos;,
StateCode__c = &apos;IN&apos;,
StateCode__c = &apos;KS&apos;,
StateCode__c = &apos;KY&apos;,
StateCode__c = &apos;LA&apos;,
StateCode__c = &apos;MA&apos;,
StateCode__c = &apos;MD&apos;,
StateCode__c = &apos;ME&apos;,
StateCode__c = &apos;MI&apos;,
StateCode__c = &apos;MN&apos;,
StateCode__c = &apos;MO&apos;,
StateCode__c = &apos;MP&apos;,
StateCode__c = &apos;MS&apos;,
StateCode__c = &apos;MT&apos;,
StateCode__c = &apos;NC&apos;,
StateCode__c = &apos;ND&apos;,
StateCode__c = &apos;NE&apos;,
StateCode__c = &apos;NH&apos;,
StateCode__c = &apos;NJ&apos;,
StateCode__c = &apos;NM&apos;,
StateCode__c = &apos;NV&apos;,
StateCode__c = &apos;NY&apos;,
StateCode__c = &apos;OH&apos;,
StateCode__c = &apos;OK&apos;,
StateCode__c = &apos;OR&apos;,
StateCode__c = &apos;PA&apos;,
StateCode__c = &apos;PR&apos;,
StateCode__c = &apos;RI&apos;,
StateCode__c = &apos;SC&apos;,
StateCode__c = &apos;SD&apos;,
StateCode__c = &apos;TN&apos;,
StateCode__c = &apos;TX&apos;,
StateCode__c = &apos;UT&apos;,
StateCode__c = &apos;VA&apos;,
StateCode__c = &apos;VI&apos;,
StateCode__c = &apos;VT&apos;,
StateCode__c = &apos;WA&apos;,
StateCode__c = &apos;WI&apos;,
StateCode__c = &apos;WV&apos;,
StateCode__c = &apos;WY&apos;
) 
)
)
)</errorConditionFormula>
        <errorDisplayField>StateCode__c</errorDisplayField>
        <errorMessage>USA state code should be aligned with masterdata or empty</errorMessage>
    </validationRules>
</CustomObject>